code fixes and update swagger (#95)
* Fix withHeader return value

* Fix farm_ids query param

* Update swagger

* fix /gateway handling

* fix item
